Rewrite 2: fix clipping in slideshow full-screen.

--- a/theme/pengxwang/web/style.css
+++ b/theme/pengxwang/web/style.css
@@ -771,6 +771,9 @@ article figcaption > span.caption {
 @media (max-width: 600px) { /* --post-width */
   article figcaption > span.caption { margin-left: 0.3em; }
   .slides.full-screen { overflow: visible; }
+  .slide.full-screen > figure > img {
+    max-height: 80vh; /* nicolas-hoizey.com/2015/02/viewport-height-is-taller-than-the-visible-part-of-the-document-in-some-mobile-browsers.html */
+  }
   .slide:not(.full-screen) > figure > img {
     margin-left: auto;
     margin-right: auto;
